# pyCuSaxs

./: .gitignore  404.html  BICELLE_FIT_CMA_INTEGRATION.md  CHANGES.md  CMakeLists.txt  DATABASE.md  DATABASE_USAGE.md  DQ_FEATURE.md  FITTING_SCRIPTS_INSTALLATION.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  INTEGRATION_GUIDE.md  MKDOCS_FIXES.md  QUICK_REFERENCE.md  README.md  SAXS_SUBTRACT_CHANGES.md  SCRIPT_INSTALLATION.md  SOLVENT_SUBTRACTION.md  TEST_CLUSTERING_README.md  compare_fits.py  ila  index.html  index.rst  main.py  mkdocs.yml  pyproject.toml  requirements.txt  saxs_widget.py  setup.sh  sitemap.xml  test_clustering.py  test_clustering_compare.py  test_clustering_full.py  test_clustering_full_compare.py  topology.py  trajectories.py
.claude/: settings.local.json
.github/workflows/: docs.yml
SCRIPTS/: index.html
algorithm/overview/: index.html
algorithm/performance/: index.html
algorithm/pipeline/: index.html
api/: modules.rst  python.rst
api/backend/: index.html
api/python/: index.html
cpp-src/: CMakeLists.txt  cudaSAXS.cu  fatbin_stub.cpp
cpp-src/Exec/: CMakeLists.txt  Options.cpp  Options.h  RunSaxs.cu  RunSaxs.h
cpp-src/Saxs/: CMakeLists.txt  Splines.cu  Splines.h  opsfact.cu  opsfact.h  saxsDeviceKernels.cu  saxsDeviceKernels.cuh  saxsKernel.cu  saxsKernel.h
cpp-src/System/: AtomCounter.cpp  AtomCounter.h  CMakeLists.txt  Cell.cpp  Cell.h
cpp-src/Utilities/: BSpline.cpp  BSpline.h  BSpmod.cpp  BSpmod.h  CMakeLists.txt  MyErrors.h  Scattering.cpp  Scattering.h
cpp-src/cmake/: CudaArchitectures.cmake  FindDependencies.cmake  cudaSAXSConfig.cmake.in  cudaSAXSConfigVersion.cmake.in
cpp-src/include/: CudaSaxsInterface.h  Parameters.h  Units.h
cpp-src/pybind/: cuda_bindings.cpp
data/: .gitignore  README.md
development/architecture/: index.html
development/changelog/: index.html
development/contributing/: index.html
docs/: SCRIPTS.md  backend.md  conf.py  index.md  python.md  quickstart.md  troubleshooting.md
docs/algorithm/: overview.md  performance.md  pipeline.md
docs/api/: backend.md  python.md
docs/development/: architecture.md  changelog.md  contributing.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/user-guide/: cli.md  database.md  gui.md  python-api.md  solvent-subtraction.md
getting-started/configuration/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
javascripts/: mathjax.js
pycusaxs/: __init__.py  cli.py  config.py  core.py  gui.py  logger.py  main.py  main_new.py  progress.py  saxs_database.py  saxs_db_tool.py  saxs_defaults.py  saxs_subtract.py  saxs_widget.py  topology.py
pycusaxs/data/: README.md  reference_solvents.db
pycusaxs/fit/: BICELLE_FIT_README.md  README_CMA_ES.md  bicelle_fit.py  bicelle_model.py  fitBilayer.py  fitBilayer2.py  lamellar_fit.py  lamellar_fit_improved.py  lamellar_model.py
search/: search_index.json
troubleshooting/: index.html
user-guide/cli/: index.html
user-guide/database/: index.html
user-guide/gui/: index.html
user-guide/python-api/: index.html
user-guide/solvent-subtraction/: index.html
