[build-system]
requires = [
    "scikit-build-core[pyproject]>=0.7.0",
    "pybind11>=2.11",
    "numpy>=1.23",
]
build-backend = "scikit_build_core.build"

[project]
name = "pycusaxs"
version = "0.1.0"
description = "CUDA-accelerated SAXS trajectory tools with a PySide6 front-end"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "pyCuSaxs Authors" }]
dependencies = [
    "PySide6>=6.7",
    "MDAnalysis>=2.0",
    "networkx>=3.0",
    "numpy>=1.23",
]

[project.scripts]
pycusaxs = "pycusaxs.main:main"
saxs-widget = "pycusaxs.main:main"

[tool.scikit-build]
minimum-version = "0.7"

[tool.scikit-build.wheel]
packages = ["pycusaxs"]

[tool.scikit-build.cmake]
build-type = "Release"
source-dir = "."
