[build-system]
requires = [
  "scikit-build-core[pyproject]>=0.7.0",
  "pybind11>=2.11",
  "numpy>=1.23",
]
build-backend = "scikit_build_core.build"

[project]
name = "pycusaxs"
version = "0.1.0"
description = "CUDA-accelerated SAXS trajectory tools with a PySide6 front-end"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "pyCuSaxs Authors" }]
dependencies = [
  "PySide6>=6.7",
  "MDAnalysis>=2.0",
  "networkx>=3.0",
  "numpy>=1.23",
  "tqdm>=4.65",
  "cupy-cuda12x>=12.0; platform_system=='Linux'",
]

[project.scripts]
pycusaxs = "pycusaxs.main:main"
saxs-widget = "pycusaxs.main:main"
saxs-db = "pycusaxs.saxs_db_tool:main"
saxs-subtract = "pycusaxs.saxs_subtract:main"

[project.optional-dependencies]
cuda11 = ["cupy-cuda11x>=11.0"]
cuda12 = ["cupy-cuda12x>=12.0"]
fit = ["scipy>=1.9", "matplotlib>=3.6"]

[tool.scikit-build]
minimum-version = "0.7"
wheel.packages = ["pycusaxs"]
cmake.build-type = "Release"
cmake.source-dir = "."
cmake.verbose = true

[tool.scikit-build.cmake.define]
CUSAXS_CHECK_CUDA = "ON"
